--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "engines": [
     "node >= 7.6.0"
   ],
-  "license": "MIT"
+  "scripts": {
+    "test": "mocha specs --check-leaks --full-trace --use_strict --recursive --require ./specs/spec-helper.js"
+  },
+  "dependencies": {
+    "glob": "^7.1.2",
+    "shasum": "^1.0.2",
+    "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-shallow-deep-equal": "^1.4.6",
+    "mocha": "^3.5.3"
+  }
 }
