--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "glob": "^7.1.2",
+    "lodash.merge": "^4.6.0",
+    "lodash.omit": "^4.5.0",
     "shasum": "^1.0.2",
     "uuid": "^3.1.0"
   },
