--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test": "mocha specs --check-leaks --full-trace --use_strict --recursive --require ./specs/spec-helper.js"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "glob": "^7.1.2",
-    "lodash.merge": "^4.6.0",
-    "lodash.omit": "^4.5.0",
+    "lodash.sortby": "^4.7.0",
     "shasum": "^1.0.2",
     "uuid": "^3.1.0"
   },
