--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-shallow-deep-equal": "^1.4.6",
-    "mocha": "^3.5.3"
+    "mocha": "^3.5.3",
+    "sinon": "^3.3.0",
+    "sinon-chai": "^2.13.0"
   }
 }
