--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Agnostic migration tool",
   "main": "index.js",
-  "homepage": "https://github.com/rwillians/mygreat#readme",
-  "repository": "git@github.com:rwillians/mygreat.git",
+  "homepage": "https://github.com/haoc-labs/mygreat#readme",
+  "repository": "git@github.com:haoc-labs/mygreat.git",
   "bugs": {
-    "url": "https://github.com/rwillians/mygreat/issues"
+    "url": "https://github.com/haoc-labs/mygreat/issues"
   },
   "contributors": [
     "Rafael Willians <me@rwillians.com>"
