--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mygreat",
-  "version": "1.0.0",
+  "name": "@haoc-labs/mygreat",
+  "version": "0.1.0",
   "description": "Agnostic migration tool",
   "main": "index.js",
   "homepage": "https://github.com/haoc-labs/mygreat#readme",
