--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "bluebird": "^3.5.0",
+    "commander": "^2.11.0",
     "glob": "^7.1.2",
     "lodash.sortby": "^4.7.0",
     "shasum": "^1.0.2",
