--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@haoc-labs/mygreat",
-  "version": "1.0.2",
+  "name": "mygreat",
+  "version": "1.1.2",
   "description": "Agnostic migration tool",
   "main": "index.js",
-  "homepage": "https://github.com/haoc-labs/mygreat#readme",
-  "repository": "git@github.com:haoc-labs/mygreat.git",
+  "homepage": "https://github.com/rwillians/mygreat#readme",
+  "repository": "git@github.com:rwillians/mygreat.git",
   "bugs": {
-    "url": "https://github.com/haoc-labs/mygreat/issues"
+    "url": "https://github.com/rwillians/mygreat/issues"
   },
   "contributors": [
     "Rafael Willians <me@rwillians.com>"
